--- a/docs/MedianDecisionRule/document.tex
+++ b/docs/MedianDecisionRule/document.tex
@@ -1,46 +1,21 @@
-\documentclass[a4paper,11pt, oneside]{article}
-
-\usepackage[utf8] { inputenc }
-\usepackage[T1] { fontenc } 
-\usepackage[english]{babel}
-\usepackage{titlesec, blindtext, color}
-\definecolor{gray75}{gray}{0.75}
-\newcommand{\hsp}{\hspace{20pt}}
-
-\usepackage{amsmath}
-\usepackage{amsthm}
-\usepackage{amssymb}
-\usepackage[titletoc]{appendix}
-\usepackage{array}
-\usepackage{booktabs}
-\usepackage{float}
-\usepackage{braket}
-\usepackage{fullpage}
-\usepackage{graphicx}
-\usepackage{hyperref}
-\usepackage{titlepic}
+\documentclass[a4paper,12pt]{article}
+\usepackage{amsmath}  % For equations
+\usepackage{amsfonts} % For mathematical symbols
+\usepackage{graphicx} % For figures
+\usepackage{hyperref} % For links
+\usepackage{appendix} % For appendices
 \usepackage [round,authoryear] {natbib}
-\usepackage{ifthen}
-\newtheorem{axiom}{Axiom}
-\newtheorem{theorem}{Theorem}
-% Set version number
-\newcommand{\mydocumentversion}{0.0.2}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
-\usepackage{amsmath}
-
-
-% Do not show subsections in table of contents
-\setcounter{tocdepth}{1}
-
-% Python code setup
-\usepackage{pythonhighlight}
+\usepackage{float}
 
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
 
+\usepackage{amsthm}
+\usepackage{xcolor}
+
 \theoremstyle{definition}
 \newtheorem{exinn}{Example}
+
 \newenvironment{example}
 {\clubpenalty=10000
 	\begin{exinn}%
@@ -50,51 +25,48 @@
 	{\par\kern2ex\hrule\end{exinn}}
 
 
-\begin{document}
-	
-	
-	\begin{titlepage}
-		\title{\small{Competence Development}\\
-			\huge{Bayesian Decision Theory Asymmetric Cost}
-		}
-		\author{Jonas Petersen \\ Ander Runge Walther }
-		\date{} % No date on the title page
-		\maketitle
-		\thispagestyle{empty}
-	\end{titlepage}
-	
-	\newpage
-	\tableofcontents
-	\addtocontents{toc}{\protect\thispagestyle{plain}}
+\title{Bayesian Decision Theory\\
+	\small{Median Decision Rule}}
+\author{Jonas Petersen \\ Ander Runge Walther }
+\date{\today}
 
-	\thispagestyle{plain}
+\begin{document}
+	\maketitle
 	
+	\begin{abstract}
+		This study investigates the derivation of the median as the optimal decision rule from a specific cost function within the framework of Bayesian decision theory. By exploring the implications of a linear asymmetric cost function, we illustrate the skewness in penalty structures associated with underestimation and overestimation. The analysis leads to the formulation of an expected cost that highlights the importance of the median in decision-making scenarios.
+	\end{abstract}
 	
-	\section{Introduction}
-	This note considers how quantile regression can be derived, from a particular cost function, as the optimal decision rule using Bayesian decision theory. Consider a regression scenario where $s$ denote the true value and $U(x,D)$ the estimate based on input $x$ and data $D$. A linear asymmetric cost function can be written viz
+	\noindent
+	This study considers how the median can be derived as the optimal decision rule from a particular cost function using Bayesian decision theory. Let $s$ denote the true value and $U(x,D)$ the estimate based on input $x$ and data $D$. A linear asymmetric cost function can be expressed viz
 	\begin{equation}
-		C(U(x,D), s) = \alpha\cdot \text{swish}(U(x,D)-s,\beta)+(1-\alpha)\cdot\text{swish}(s-U(x,D),\beta)
+		C(U(x,D), s) = \alpha \cdot \text{swish}(U(x,D) - s, \beta) + (1 - \alpha) \cdot \text{swish}(s - U(x,D), \beta)
 		\label{eq:cost}
 	\end{equation}
-	where
+	where the function $\text{swish}(z,\beta)$ is defined as
 	\begin{equation}
-		\text{swish}(z,\beta) = \frac{z}{1+e^{-z\beta}}
+		\text{swish}(z,\beta) = \frac{z}{1 + e^{-z\beta}}.
 	\end{equation}
-	and $z\equiv U(x,D)-s$ for brevity. For $\beta\gg 1 $ equation \eqref{eq:cost} approximate two linear segments around Origin as shown in figure \ref{fig:1}.
+	For brevity, we set $z \equiv U(x,D) - s$. When $\beta \gg 1$, equation \eqref{eq:cost} approximates two linear segments around the origin, as illustrated in Figure \ref{fig:1}.
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width = 1\textwidth]{figures/cost_plot.pdf}
-		\caption{Illustration of equation \eqref{eq:cost} with different parameter values $\alpha,\beta$.}
+		\includegraphics[width=1\textwidth]{figures/cost_plot.pdf}
+		\caption{Illustration of equation \eqref{eq:cost} with different parameter values $\alpha$ and $\beta$.}
 		\label{fig:1}
 	\end{figure}
-	Taking $\alpha \ll 1$, then $z<0$ will be penalized relatively more than $z>0$. $z<0$ corresponds to underestimation, so this is penalized greater relative to overestimation. Now
+	By taking $\alpha \ll 1$, we observe that when $z < 0$ (indicating underestimation), the penalty incurred is relatively greater than for $z > 0$ (indicating overestimation). This skewed penalty structure emphasizes the greater cost associated with underestimating the true value.
+	
+	We can now compute the expected cost given the input and data as follows
+	
 	\begin{equation}
 		\begin{split}
-			\mathbb{E}[C|x,D,I] & =\int ds p(s|x,D,I) \bigg(\alpha\cdot \text{swish}(U(x,D)-s,\beta)+(1-\alpha)\cdot\text{swish}(s-U(x,D),\beta)\bigg)
+			\mathbb{E}[C | x, D, I] & = \int ds \, p(s | x, D, I) \bigg( \alpha \cdot \text{swish}(U(x,D) - s, \beta) \\
+			& \quad + (1 - \alpha) \cdot \text{swish}(s - U(x,D), \beta) \bigg),
 		\end{split}
 		\label{eq:1}
 	\end{equation}
-	where $I$ denote the background information~\citep{Sivia2006}. The optimal decision rule $U^*(x,D)$ can be found from the derivative
+	
+	where $I$ denotes the background information~\citep{Sivia2006}. The optimal decision rule $U^*(x,D)$ can be found from the derivative
 	\begin{equation}
 		\begin{split}
 			\frac{dC}{dU} & = \frac{dC}{dz}\frac{dz}{dU}\\
@@ -135,9 +107,6 @@
 		\caption{The relative difference between numerically optimizing the expected cost and the percentile, as a function of $\alpha$.}
 		\label{fig:3}
 	\end{figure}
-	
-	\section{Summary and Discussion}	
-	It has been shown how quantile regression can, using Bayesian decision theory, be derived as the optimal decision rule in case of an asymmetric linear cost function. Conversely, it can be deduced that any deviation from such a cost function will yield a different optimal decision rule.
 	
 	
 	\bibliographystyle{plainnat}
