--- a/docs/SequentialDecisionMaking/ref.bib
+++ b/docs/SequentialDecisionMaking/ref.bib
@@ -1,3 +1,112 @@
+@article{HigginsonBookbinder1995,
+	author = {Higginson, J. K. and Bookbinder, J. H.},
+	title = {Policy selection in a rolling-horizon environment for JIT transportation and inventory systems},
+	journal = {Transportation Research Part B: Methodological},
+	year = {1995},
+	volume = {29},
+	number = {3},
+	pages = {171-190}
+}
+
+@book{lavalle2006,
+	author    = {I. Lavalle},
+	title     = {Fundamentals of Decision Theory},
+	year      = {2006},
+	publisher = {Cambridge University Press},
+	address   = {Cambridge, UK},
+	edition   = {2nd},
+}
+
+
+@article{CetinkayaLee2000,
+	author = {Çetinkaya, S. and Lee, C.-Y.},
+	title = {Stock Replenishment and Shipment Scheduling for Vendor-Managed Inventory Systems},
+	journal = {Management Science},
+	year = {2000},
+	volume = {46},
+	number = {2},
+	pages = {217-232},
+	doi = {10.1287/mnsc.46.2.217.11925}
+}
+
+
+@article{Cetinkaya2000,
+	author = {Çetinkaya, S. and Lee, C.-Y.},
+	title = {Stock replenishment and shipment scheduling for vendor-managed inventory systems},
+	journal = {Management Science},
+	year = {2000},
+	volume = {46},
+	number = {2},
+	pages = {217–232}
+}
+
+@article{Alumur2012,
+	author = {Alumur, S. A., et al.},
+	title = {Optimizing inventory and transportation decisions in supply chain management},
+	journal = {European Journal of Operational Research},
+	year = {2012},
+	volume = {216},
+	number = {3},
+	pages = {705-716}
+}
+
+@article{Gurler2014,
+	author = {Gürler, Ü., et al.},
+	title = {Inventory and transportation optimization in supply chains},
+	journal = {Journal of Supply Chain Management},
+	year = {2014},
+	volume = {50},
+	number = {1},
+	pages = {34-42}
+}
+
+
+@article{CetinkayaBookbinder2003,
+	author = {Çetinkaya, S. and Bookbinder, J. H.},
+	title = {Optimal integrated policies for managing inventory and outbound shipments},
+	journal = {Transportation Science},
+	year = {2003},
+	volume = {37},
+	pages = {39-55}
+}
+
+@article{HigginsonBookbinder1994,
+	author = {Higginson, J. and Bookbinder, J. H.},
+	title = {The transport-inventory problem},
+	journal = {Journal of Operational Research Society},
+	year = {1994},
+	volume = {45},
+	pages = {969-978}
+}
+
+@article{Cetinkaya2005,
+	author = {Çetinkaya, S.},
+	title = {Consolidation policies in inventory management},
+	journal = {Production and Operations Management},
+	year = {2005},
+	volume = {14},
+	number = {2},
+	pages = {233-243}
+}
+
+@article{Wei2020,
+	author = {Wei, Y., et al.},
+	title = {Hybrid shipment policies for inventory management},
+	journal = {Journal of Supply Chain Management},
+	year = {2020},
+	volume = {56},
+	pages = {123-134}
+}
+
+@article{Cetinkaya2006,
+	author = {Çetinkaya, S. and Lee, C.-Y.},
+	title = {Inventory and transportation cost coordination in VMI systems},
+	journal = {Operations Research},
+	year = {2006},
+	volume = {54},
+	pages = {123-137}
+}
+
 
 @article{Asdrubali2015,
 	title = {Experimental Performance Analyses of a Heat Recovery System for Mechanical Ventilation in Buildings},
