updated sequential decision paper

--- a/docs/SequentialDecisionMaking/document.tex
+++ b/docs/SequentialDecisionMaking/document.tex
@@ -101,7 +101,7 @@
 	\section{Numerical Example}
 	\begin{enumerate}
 		\item \href{https://www.academia.edu/27965536/Inventorycontroltextbook_140429044831_phpapp02_1_}{S. Axsäter. Inventory control}
-		\href{https://proceedings.mlr.press/v151/kan22a/kan22a.pdf}{Gasthaus paper}
+		\item \href{https://proceedings.mlr.press/v151/kan22a/kan22a.pdf}{Gasthaus paper}
 		\item \href{https://arxiv.org/pdf/2012.02392}{inspiration for introduction}
 		\item \href{https://arxiv.org/pdf/2310.17168}{probabilistic trucks}
 		\item \href{https://arxiv.org/pdf/2310.16096}{Amazon paper} (inspiration)
