--- a/docs/SequentialDecisionMaking/document.tex
+++ b/docs/SequentialDecisionMaking/document.tex
@@ -102,13 +102,7 @@
 	where $Q_q(X)$ denotes the $q$-quantile of the random variable $X$. This result provides an actionable rule for the Robot’s decision-making based on the balance of costs associated with stock levels.
 	
 	\section{Practical Implementation}
-	\begin{enumerate}
-		\item \href{https://www.academia.edu/27965536/Inventorycontroltextbook_140429044831_phpapp02_1_}{S. Axsäter. Inventory control}
-		\item \href{https://proceedings.mlr.press/v151/kan22a/kan22a.pdf}{Gasthaus paper}
-		\item \href{https://arxiv.org/pdf/2012.02392}{inspiration for introduction}
-		\item \href{https://arxiv.org/pdf/2310.17168}{probabilistic trucks}
-		\item \href{https://arxiv.org/pdf/2310.16096}{Amazon paper} (inspiration)
-	\end{enumerate}
+	
 	
 	
 	\section{Conclusion}
@@ -117,7 +111,16 @@
 	\begin{enumerate}
 		\item A few words on the intuitive interpretation of the cost function? The number of units overstocked multiplied with the cost of overstocking per unit. The number of units understocked multiplied with the value of each unit. The latter represents the lost value.
 		\item Mention the benefit of the analytical solution; the computation speed relative to a numerical optimization is highly beneficial at scale.
+		\item Compress the recursive relation to $m$-notation. 
 		
+	\end{enumerate}
+	
+	\begin{enumerate}
+		\item \href{https://www.academia.edu/27965536/Inventorycontroltextbook_140429044831_phpapp02_1_}{S. Axsäter. Inventory control}
+		\item \href{https://proceedings.mlr.press/v151/kan22a/kan22a.pdf}{Gasthaus paper}
+		\item \href{https://arxiv.org/pdf/2012.02392}{inspiration for introduction}
+		\item \href{https://arxiv.org/pdf/2310.17168}{probabilistic trucks}
+		\item \href{https://arxiv.org/pdf/2310.16096}{Amazon paper} (inspiration)
 	\end{enumerate}
 	
 	\newpage
