--- a/docs/SequentialDecisionMaking/ref.bib
+++ b/docs/SequentialDecisionMaking/ref.bib
@@ -8,6 +8,17 @@
 	pages = {171-190}
 }
 
+@book{bartmann1992inventory,
+	title={Inventory Control: Models and Methods},
+	author={Bartmann, Dieter and Beckmann, Martin J.},
+	year={1992},
+	publisher={Springer-Verlag},
+	address={Berlin; New York},
+	pages={252},
+	isbn={9783540542216}
+}
+
+
 @book{lavalle2006,
 	author    = {I. Lavalle},
 	title     = {Fundamentals of Decision Theory},
